--- a/Corona-Warn-App/src/main/assets/technical_en.html
+++ b/Corona-Warn-App/src/main/assets/technical_en.html
@@ -1,10 +1,7 @@
 <h2>Third Party Notices</h2>
-<p>corona-warn-app/cwa-app-android uses third-party software or other resources that
-    may be distributed under licenses different from corona-warn-app/cwa-app-android
-    software.
-    In the event that we overlooked to list a required notice, please bring this
-    to our attention by contacting us via this email:
-    corona-warn-app.opensource@sap.com</p>
+<p>covid-be-app/cwa-app-android uses third-party software or other resources that
+    may be distributed under licenses different from covid-be-app/cwa-app-android
+    software.</p>
 <h2>Components:</h2>
 <p>Component: android-database-sqlcipher
     Licensor: Zetetic LLC
