--- a/Corona-Warn-App/src/main/assets/terms_de.html
+++ b/Corona-Warn-App/src/main/assets/terms_de.html
@@ -16,9 +16,9 @@
 <p>
   Diese Nutzungsbedingungen bilden die Grundlage für Ihre Nutzung der
   Coronalert-App (“CAA”) und aller zukünftigen Versionen davon (Patches, Updates
-  und Upgrades) (“App”) sowie für die Nutzung aller anderen Dienste
-  (“CWA-Dienste”), die bereits verfügbar sind oder von SCIENSANO im Zusammenhang
-  mit der App zur Verfügung gestellt werden können.
+  und Upgrades) (“App”) sowie für die Nutzung aller anderen Dienste, die bereits
+  verfügbar sind oder von SCIENSANO im Zusammenhang mit der App zur Verfügung
+  gestellt werden können.
 </p>
 <p>
   Die separate Datenschutzerklärung bildet einen integralen Bestandteil dieser
@@ -333,9 +333,8 @@
   ist:
 </p>
 <p>
-  ·&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sie die App oder die
-  CWA-Dienste ohne Unterbrechung nutzen können oder dass diese frei von Fehlern
-  sind
+  ·&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sie die App oder die dienste
+  ohne Unterbrechung nutzen können oder dass diese frei von Fehlern sind
 </p>
 <p>
   ·&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Die App und die
