--- a/Corona-Warn-App/src/main/assets/terms_en.html
+++ b/Corona-Warn-App/src/main/assets/terms_en.html
@@ -13,8 +13,8 @@
 <p>
   These Terms of Use form the basis for your use of the Coronalert-App (“CAA”)
   and any future versions thereof (patches, updates and upgrades) (“App”) and
-  the use of any other services (“CWA Services”) which are already available or
-  may be made available by the SCIENSANO in connection with the App.
+  the use of any other services which are already available or may be made
+  available by the SCIENSANO in connection with the App.
 </p>
 <p>
   The separate Data Protection Declaration forms an integral part of these Terms
@@ -304,7 +304,7 @@
 </p>
 <p>
   ·&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;you will be able to
-  use the App or the CWA Services without any interruption or that these will be
+  use the App or the Services without any interruption or that these will be
   free from errors
 </p>
 <p>
