--- a/Corona-Warn-App/src/main/assets/terms_fr.html
+++ b/Corona-Warn-App/src/main/assets/terms_fr.html
@@ -18,9 +18,8 @@
   Les présentes conditions d’utilisation constituent la base de votre
   utilisation de l’application Coronalert-App (“CAA”) et de toutes ses versions
   futures (correctifs, mises à jour et mises à niveau) (“App”) et de
-  l’utilisation de tous les autres services (“Services CWA”) qui sont déjà
-  disponibles ou peuvent être mis à disposition par le SCIENSANO en relation
-  avec l’App.
+  l’utilisation de tous les autres services qui sont déjà disponibles ou peuvent
+  être mis à disposition par le SCIENSANO en relation avec l’App.
 </p>
 <p>
   La déclaration distincte sur la protection des données fait partie intégrante
@@ -346,8 +345,8 @@
 </p>
 <p>
   ·&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;que vous pourrez
-  utiliser l’application ou les services CWA sans aucune interruption ou que
-  ceux-ci seront exempts d’erreurs
+  utiliser l’application ou les services sans aucune interruption ou que ceux-ci
+  seront exempts d’erreurs
 </p>
 <p>
   ·&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;l’application et les
