--- a/Corona-Warn-App/src/main/assets/terms_nl.html
+++ b/Corona-Warn-App/src/main/assets/terms_nl.html
@@ -14,9 +14,9 @@
 <p>
   Deze gebruiksvoorwaarden vormen de basis voor uw gebruik van de Coronalert-App
   («CAA») en eventuele toekomstige versies daarvan (patches, updates en
-  upgrades) («App») en het gebruik van eventuele andere diensten
-  («CWA-services») die al beschikbaar zijn of door de SCIENSANO in verband met
-  de App ter beschikking worden gesteld.
+  upgrades) («App») en het gebruik van eventuele andere diensten die al
+  beschikbaar zijn of door de SCIENSANO in verband met de App ter beschikking
+  worden gesteld.
 </p>
 <p>
   De afzonderlijke verklaring inzake gegevensbescherming maakt integraal deel
@@ -325,7 +325,7 @@
   in het bijzonder niet:
 </p>
 <p>
-  ·&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;u de App of de CWA
+  ·&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;u de App of de
   Services zonder enige onderbreking kunt gebruiken of dat deze vrij zijn van
   fouten.
 </p>
