--- a/Corona-Warn-App/src/main/assets/terms_en.html
+++ b/Corona-Warn-App/src/main/assets/terms_en.html
@@ -103,7 +103,7 @@
     whether they may have had exposure to you during that period.
 </p>
 <p>&nbsp;</p>
-<h2>2. What do i do if i have been exposed to a confirmed case?</h2>
+<h2>2. What do I do if I have been exposed to a confirmed case?</h2>
 <p>
     If the App notifies you that you have been exposed to a confirmed case, you
     will also receive information on what to do next. These instructions are not
