--- a/Corona-Warn-App/src/main/assets/privacy_fr.html
+++ b/Corona-Warn-App/src/main/assets/privacy_fr.html
@@ -12,7 +12,7 @@
     disponibles sur le site https://github.com/DP-3T/documents. En outre,
     l'application de suivi des contacts utilise le système de notification
     d'exposition créé par Google et Apple. Ce système de notification d'exposition
-    permet à l'application de suivir des contacts et d'envoyer des notifications à
+    permet à l'application de suivre des contacts et d'envoyer des notifications à
     l'utilisateur comme expliqué plus en détail ci-dessous. De plus amples
     informations sur le système de notification d'exposition sont disponibles à
     l'adresse suivante : https://www.google.com/covid19/exposurenotifications/.
