--- a/Corona-Warn-App/src/main/assets/privacy_fr.html
+++ b/Corona-Warn-App/src/main/assets/privacy_fr.html
@@ -125,7 +125,7 @@
     détruits après 14 jours.
 </p>
 <p>
-    Une fois que les clés secrètes pour générer les ID aléatoires diffusées sont
+    Une fois que les clés secrètes pour générer les ID aléatoires diffusés sont
     chargées par un utilisateur infecté sur le serveur central, l'application de
     suivi des contacts des autres utilisateurs peut récupérer ces clés secrètes
     sur le serveur pour évaluer si ces autres utilisateurs ont été exposés au
@@ -304,7 +304,7 @@
     L'application de suivi des contacts ne prend aucune décision automatisée à
     l'égard d'un utilisateur au sens de l'article 22 du RGPD.
 </p>
-<h2>Avec qui les donnees à caractère personnel sont-elles partagées ?</h2>
+<h2>Avec qui les données à caractère personnel sont-elles partagées ?</h2>
 <p>Téléchargement vers le serveur central</p>
 <p>
     Comme décrit aux paragraphes 3 et 4, l'utilisateur peut télécharger des
@@ -343,8 +343,8 @@
     ne partage pas l'identité des utilisateurs avec eux.
 </p>
 <h2>
-    Les donnees a caractere personnel sont-elles transferees vers des pays hors de
-    l'union europeenne ?
+    Les données à caractère personnel sont-elles transférées vers des pays hors de
+    l'Union Européenne ?
 </h2>
 <p>
     Les données ne sont pas transférées vers des pays situés en dehors de l'Union
