update privacy html

--- a/Corona-Warn-App/src/main/assets/privacy_de.html
+++ b/Corona-Warn-App/src/main/assets/privacy_de.html
@@ -304,7 +304,7 @@
 <p>
     Wie in den Absätzen 3 und 4 beschrieben, kann der Benutzer Daten auf den
     zentralen Server hochladen. Dieser zentrale Server wird von Sciensano in
-    Belgien gehostet.
+    der Europäischen Union gehostet.
 </p>
 <p>
     Der zentrale Server speichert nur dann Informationen von infizierten
