--- a/Corona-Warn-App/src/main/assets/privacy_en.html
+++ b/Corona-Warn-App/src/main/assets/privacy_en.html
@@ -271,7 +271,7 @@
 <p>Upload to the central server</p>
 <p>
     As described in paragraphs 3 and 4 the user may upload data to the central
-    server. This central server is hosted by Sciensano in Belgium.
+    server. This central server is hosted by Sciensano in the European Union.
 </p>
 <p>
     The central server only stores information of infected users if they decide to
