--- a/Corona-Warn-App/src/main/assets/privacy_fr.html
+++ b/Corona-Warn-App/src/main/assets/privacy_fr.html
@@ -309,7 +309,7 @@
 <p>
     Comme décrit aux paragraphes 3 et 4, l'utilisateur peut télécharger des
     données sur le serveur central. Ce serveur central est hébergé par Sciensano
-    en Belgique.
+    dans l'Union européenne.
 </p>
 <p>
     Le serveur central ne stocke les informations des utilisateurs infectés que
