--- a/Corona-Warn-App/src/main/assets/privacy_nl.html
+++ b/Corona-Warn-App/src/main/assets/privacy_nl.html
@@ -302,7 +302,7 @@
 <p>Upload naar de centrale server</p>
 <p>
     Zoals beschreven in paragraaf 3 en 4 kan de gebruiker gegevens opladen naar de
-    centrale server. Deze centrale server wordt gehost door Sciensano in België.
+    centrale server. Deze centrale server wordt gehost door Sciensano in de Europese Unie.
 </p>
 <p>
     De centrale server bewaart alleen informatie van geïnfecteerde gebruikers als
