Remove German wording in Dutch terms

--- a/Corona-Warn-App/src/main/assets/terms_nl.html
+++ b/Corona-Warn-App/src/main/assets/terms_nl.html
@@ -200,7 +200,7 @@
 <p>&nbsp;</p>
 <h3>De App moet draaien en geactiveerd zijn</h3>
 <p>
-    De App Muss moet op uw apparaat draaien (op de voorgrond of achtergrond) en
+    De App moet op uw apparaat draaien (op de voorgrond of achtergrond) en
     moet geactiveerd zijn. Hiervoor moet u de App lanceren. Als u de App niet
     start, of de App deactiveert of afsluit, zal deze geen ontmoetingen met andere
     mensen registreren en geen willekeurige ID’s genereren die door andere
