Correct iOS capitalization

--- a/Corona-Warn-App/src/main/assets/terms_nl.html
+++ b/Corona-Warn-App/src/main/assets/terms_nl.html
@@ -340,7 +340,7 @@
     apps die op uw apparaat zijn geïnstalleerd.
 </p>
 <p>&nbsp;</p>
-<h2>10. Speciale voorwaarden voor de ios-versie van de app</h2>
+<h2>10. Speciale voorwaarden voor de iOS-versie van de app</h2>
 <p>
     De volgende voorwaarden zijn van toepassing als u de App bij de Apple App
     Store koopt en deze met het iOS-besturingssysteem gebruikt.
