--- a/Corona-Warn-App/src/main/assets/terms_de.html
+++ b/Corona-Warn-App/src/main/assets/terms_de.html
@@ -5,8 +5,8 @@
 </p>
 <p>Rue Juliette Wytsman, 14 1050 Brüssel BELGIEN</p>
 <p>
-    Eingetragen bei der Crossroads Bank for Enterprises in Brüssel unter der
-    Nummer 0693.876.830
+    eingetragen im Zentralen Belgischen Unternehmensregister (BCE/KBO) in Brüssel unter der Nummer
+    0693.876.830.
 </p>
 <p>&nbsp;</p>
 <p>
