--- a/Corona-Warn-App/src/main/assets/privacy_de.html
+++ b/Corona-Warn-App/src/main/assets/privacy_de.html
@@ -8,19 +8,28 @@
 <section>
     <p>
         Die genaue Funktionsweise von Coronalert und der zugrundeliegenden Datenbanken sowie die
-        diesbezüglichen Zuständigkeiten werden durch ein Zusammenarbeitsabkommen zwischen dem
-        Föderalstaat, der Flämischen Gemeinschaft, der Wallonischen Region, der Deutschsprachigen
-        Gemeinschaft und der Gemeinsamen Gemeinschaftskommission regelt für die gemeinsame
-        Verarbeitung von Daten durch Sciensano und die von den zuständigen föderierten Teilgebieten
-        oder von den zuständigen Agenturen bestimmten Kontaktzentren, Gesundheitsinspektionsdienste
-        und mobilen Teams im Rahmen einer Kontaktermittlung bei (vermutlich) mit dem Coronavirus
-        COVID–19 infizierten Personen auf der Grundlage einer Datenbank bei Sciensano. Dieses
-        Zusammenarbeitsabkommen regelt die verwendeten Datenbanken, insbesondere durch Artikel 14.
-        Aus Gründen der Lesbarkeit wird in diesem Text systematisch auf Sciensano als die für die
-        Bearbeitung der Datenbanken verantwortliche Person verwiesen. Aus Gründen der Lesbarkeit
-        wird in diesem Text systematisch auf Sciensano als Verantwortlichen für die Datenbanken
-        Bezug genommen, unbeschadet der Tatsache, dass die genannten Verordnungen den föderalen
-        Einheiten bestimmte Verantwortlichkeiten in Bezug auf die Anwendung selbst zuweisen.
+        diesbezüglichen Zuständigkeiten werden durch ein Zusammenarbeitsabkommen zwischen
+    </p>
+    <p>
+    <ul>
+        <li>dem Föderalstaat</li>
+        <li>der Flämischen Gemeinschaft</li>
+        <li>der Wallonischen Region</li>
+        <li>der Deutschsprachigen Gemeinschaft</li>
+        <li>der Gemeinsamen Gemeinschaftskommission</li>
+    </ul>
+    <p>
+        regelt für die gemeinsame Verarbeitung von Daten durch Sciensano und die von den zuständigen
+        föderierten Teilgebieten oder von den zuständigen Agenturen bestimmten Kontaktzentren,
+        Gesundheitsinspektionsdienste und mobilen Teams im Rahmen einer Kontaktermittlung bei
+        (vermutlich) mit dem Coronavirus COVID–19 infizierten Personen auf der Grundlage einer
+        Datenbank bei Sciensano. Dieses Zusammenarbeitsabkommen regelt die verwendeten Datenbanken,
+        insbesondere durch Artikel 14. Aus Gründen der Lesbarkeit wird in diesem Text systematisch
+        auf Sciensano als die für die Bearbeitung der Datenbanken verantwortliche Person verwiesen.
+        Aus Gründen der Lesbarkeit wird in diesem Text systematisch auf Sciensano als
+        Verantwortlichen für die Datenbanken Bezug genommen, unbeschadet der Tatsache, dass die
+        genannten Verordnungen den föderalen Einheiten bestimmte Verantwortlichkeiten in Bezug auf
+        die Anwendung selbst zuweisen.
     </p>
 </section>
 
