--- a/Corona-Warn-App/src/main/assets/privacy_en.html
+++ b/Corona-Warn-App/src/main/assets/privacy_en.html
@@ -8,13 +8,21 @@
 <section>
     <p>
         The precise operation of Coronalert and the underlying databases, and the responsibilities
-        in that respect, are regulated by Cooperation agreement of 25 August 2020 between the
-        Federal State, the Flemish Community, the Walloon Region, the German-speaking Community and
-        the Joint Community Commission, concerning the joint processing of data by Sciensano and the
-        contact centres, health inspections and mobile teams designated by the competent federated
-        entities or by the competent agencies within the framework of a contact investigation of
-        persons (presumed) to be infected with the coronavirus COVID-19 on the basis of a database
-        at Sciensano.
+        in that respect, are regulated by the Cooperation agreement of 25 August 2020 between:
+    </p>
+    <p>
+    <ul>
+        <li>the Federal State</li>
+        <li>the Flemish Community</li>
+        <li>the Walloon Region</li>
+        <li>the German-speaking Community</li>
+        <li>the Joint Community Commission</li>
+    </ul>
+    <p>
+        concerning the joint processing of data by Sciensano and the contact centres, health
+        inspections and mobile teams designated by the competent federated entities or by the
+        competent agencies within the framework of a contact investigation of persons (presumed) to
+        be infected with the coronavirus COVID-19 on the basis of a database at Sciensano.
     </p>
     <p>
         This cooperation agreement regulates the databases used, in particular Article 14. For the
