--- a/Corona-Warn-App/src/main/assets/privacy_fr.html
+++ b/Corona-Warn-App/src/main/assets/privacy_fr.html
@@ -9,18 +9,28 @@
     <p>
         Le fonctionnement précis de Coronalert et des bases de données sous-jacentes, ainsi que les
         responsabilités à cet égard, sont réglementés par l’Accord de coopération du 25 août 2020
-        entre l’État fédéral, la Communauté flamande, la Région wallonne, la Communauté germanophone
-        et la Commission communautaire commune, concernant le traitement conjoint de données par
-        Sciensano et les centres de contact désignés par les entités fédérées compétentes ou par les
-        agences compétentes, par les services d’inspections d’hygiène et par les équipes mobiles
-        dans le cadre d’un suivi des contacts auprès des personnes (présumées) infectées par le
-        coronavirus COVID-19 se fondant sur une base de données auprès de Sciensano. Cet accord
-        réglemente les bases de données utilisées, en particulier l’article 14. Dans un souci de
-        lisibilité, ce texte fait systématiquement référence à Sciensano comme responsable du
-        traitement des bases de données. Dans un souci de lisibilité, ce texte fait systématiquement
-        référence à Sciensano en tant que responsable du traitement des bases de données, sans
-        préjudice du fait que les règles mentionnées attribuent certaines responsabilités concernant
-        l’application elle-même aux entités fédérées.
+        entre
+    </p>
+    <p>
+    <ul>
+        <li>l’État fédéral</li>
+        <li>la Communauté flamande</li>
+        <li>la Région wallonne</li>
+        <li>la Communauté germanophone</li>
+        <li>la Commission communautaire commune</li>
+    </ul>
+    <p>
+        concernant le traitement conjoint de données par Sciensano et les centres de contact
+        désignés par les entités fédérées compétentes ou par les agences compétentes, par les
+        services d’inspections d’hygiène et par les équipes mobiles dans le cadre d’un suivi des
+        contacts auprès des personnes (présumées) infectées par le coronavirus COVID-19 se fondant
+        sur une base de données auprès de Sciensano. Cet accord réglemente les bases de données
+        utilisées, en particulier l’article 14. Dans un souci de lisibilité, ce texte fait
+        systématiquement référence à Sciensano comme responsable du traitement des bases de données.
+        Dans un souci de lisibilité, ce texte fait systématiquement référence à Sciensano en tant
+        que responsable du traitement des bases de données, sans préjudice du fait que les règles
+        mentionnées attribuent certaines responsabilités concernant l’application elle-même aux
+        entités fédérées.
     </p>
 </section>
 <section>
@@ -74,7 +84,7 @@
     <p>
         Cette application de suivi de contacts est proposée par les administrations
         régionales de la santé et Sciensano est responsable de l'infrastructure du
-        serveur de l'application. Sciensano est un établissement public doté de la
+        serveur de l'application. Sciensano est une institution publique doté de la
         personnalité juridique, créé par la loi du 25 février 2018 relative à la
         création de Sciensano, dont le siège social est situé rue Juliette Wytsman 14,
         B-1050 Ixelles et qui est enregistré auprès de la Banque-Carrefour des
