--- a/Corona-Warn-App/src/main/assets/privacy_nl.html
+++ b/Corona-Warn-App/src/main/assets/privacy_nl.html
@@ -9,16 +9,25 @@
     <p>
         De precieze werking van Coronalert en de achterliggende gegevensbanken, en de
         verantwoordelijkheden in dat verband wordt geregeld door het Samenwerkingsakkoord van 25
-        augustus 2020 tussen de Federale staat, de Vlaamse Gemeenschap, het Waalse Gewest, de
-        Duitstalige Gemeenschap en de Gemeenschappelijke Gemeenschapscommissie, betreffende de
-        gezamenlijke gegevensverwerking door Sciensano en de door de bevoegde gefedereerde
-        entiteiten of door de bevoegde agentschappen aangeduide contactcentra, gezondheidsinspecties
-        en mobiele teams in het kader van een contactonderzoek bij personen die (vermoedelijk) met
-        het coronavirus COVID-19 besmet zijn op basis van een gegevensbank bij Sciensano. Dit
-        samenwerkingsakkoord regelt de gebruikte gegevensbanken, inzonderheid artikel 14. Voor de
-        leesbaarheid wordt in deze tekst systematisch verwezen naar Sciensano als
-        verwerkingsverantwoordelijke voor de gegevensbanken. Dit doet geen afbreuk aan het feit dat
-        in de vermelde regelgeving bepaalde verantwoordelijkheden inzake de app zelf worden
+        augustus 2020 tussen
+    </p>
+    <p>
+    <ul>
+        <li>de Federale staat</li>
+        <li>de Vlaamse Gemeenschap</li>
+        <li>het Waalse Gewest</li>
+        <li>de Duitstalige Gemeenschap</li>
+        <li>de Gemeenschappelijke Gemeenschapscommissie</li>
+    </ul>
+    <p>
+        betreffende de gezamenlijke gegevensverwerking door Sciensano en de door de bevoegde
+        gefedereerde entiteiten of door de bevoegde agentschappen aangeduide contactcentra,
+        gezondheidsinspecties en mobiele teams in het kader van een contactonderzoek bij personen
+        die (vermoedelijk) met het coronavirus COVID-19 besmet zijn op basis van een gegevensbank
+        bij Sciensano. Dit samenwerkingsakkoord regelt de gebruikte gegevensbanken, inzonderheid
+        artikel 14. Voor de leesbaarheid wordt in deze tekst systematisch verwezen naar Sciensano
+        als verwerkingsverantwoordelijke voor de gegevensbanken. Dit doet geen afbreuk aan het feit
+        dat in de vermelde regelgeving bepaalde verantwoordelijkheden inzake de app zelf worden
         toegewezen aan de gefedereerde entiteiten.
     </p>
 </section>
