--- a/Corona-Warn-App/src/main/assets/terms_fr.html
+++ b/Corona-Warn-App/src/main/assets/terms_fr.html
@@ -1,6 +1,6 @@
 <p>L’application est publiée par</p>
 <p>
-    SCIENSANO Un établissement public créé par la loi belge du 25 février 2018
+    SCIENSANO Une institution publique créé par la loi belge du 25 février 2018
 </p>
 <p>Rue Juliette Wytsman, 14 1050 Bruxelles BELGIQUE</p>
 <p>
